
=======================================================
            WanT code:  Log of Changes 
=======================================================


06 Sep 2006      bug fixed in modpoint.f90 ; iutility/Makefile coherently updated. 
                 other bugs fixed in calls to the warning routine. 
                 IO routines for NQ ETSF NetCDF fmt (courtesy of V. Olevano, M. Verstraete) 
                 added to libs. (AF) 

02 Sep 2006      configure wrapper updated.  (AF)

26 Aug 2006      WF projected DOS calculation added in dos.x . (AF)

25 Aug 2006      "formatted" attribute no longer specified in iotk file_open (transport)
                 and in iotk writing of ovp. (AF) 

09 Aug 2006      Bug fix in utility/Makefile: LDFLAGS and CFLAGS added during loading.
                 Adviced by Matias Nunez. (AF)

04 Aug 2006      Makefile in libs bug-fixed (wrong compilation of dlamch.f90 under certain
                 circumstances). Courtesy of Matias Nunes. (AF)

22 Jul 2006      Symmetry module added to wannier/ ; qexpt.f90 updated including also
                 the missing qexpt_read_symmetry routine. (AF)

18 Jul 2006      Output fmt in transport changed; ierr is given back in transfer.f90; warnings
                 and errors better treated in trasport; warning.f90 interface slightly changed; (AF)

14 Jul 2006      wS-H instead of H-wS used through the transport code; shutdown added in
                 conductor.f90; cleanup of auxiliary variables in tranport; default for
                 niterx lowered to 20 (instead of 200); documentation updated;
                 define_lead.f90 routine added (to make the smearing technique 
                 fully consistent). (AF)

13 Jul 2006      dos.f90 output changed; summary interface changed (and related upgrades
                 performed); input_from_file procedure adapted from espresso. (AF)

12 Jul 2006      "dos.dat" file produced by conductor.x renamed in "doscond.dat"; tests